# Automat

./: lab1.manifest.yaml  lab2.manifest.yaml  lab3.manifest.yaml  lab4.manifest.yaml
DetermineNFA/: CMakeLists.txt  Readme.md
DetermineNFA/src/: DetermineNFA.cpp  DetermineNFA.h
GrammarReader/: CMakeLists.txt  Readme.md
GrammarReader/src/: GrammarReader.cpp  GrammarReader.h
MealyMooreConverter/: CMakeLists.txt  Readme.md
MealyMooreConverter/src/: MealyMooreConverter.cpp
Minimize/: CMakeLists.txt  Readme.md
Minimize/src/: Minimize.cpp  Minimize.h
